# KimetsuNoFastApi

./: .env  .gitignore  Dockerfile  JenkinsFile  Jenkinsfile  Makefile  README.md  conftests.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  run.sh  test_main.py
app/: Dockerfile  entrypoint.sh  main.py  middleware.py  test_main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: hunters.py  users.py
app/api/v1/: api.py
app/api/v1/endpoints/: admin.py  hunters.py  teachers.py  users.py
app/core/: config.py  errors.py  http_exception.py  middleware.py  utils.py
app/core/services/: token.py  user.py
app/crud/: hunters.py  mixins.py  teachers.py  user.py
app/db/: mongodb_utils.py
app/models/: hunter.py  teacher.py  user.py
tests/: conftests.py  test_main.py
web/: Dockerfile  app.conf  nginx.conf
